# tdosca-tc02-plainhw

./: README.md  compliance-traps.md
3rdPartySoftware/lphw/: Makefile.am  NOTICE  README.md  change-release  configure.ac  prepClearRepCommit.sh  reconf
3rdPartySoftware/lphw/doc/: Makefile.am
3rdPartySoftware/lphw/lib/: lphw.c
3rdPartySoftware/lphw/src/: Makefile.am  testlphw.c
input-sources/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  README.md  change-release  config.h.in  configure.ac  prepClearRepCommit  prj.spec  reconf
input-sources/3rdPartySoftware/: Makefile.am  doinst.sh
input-sources/3rdPartySoftware/lphw/: AUTHORS  Doxyfile  prj.spec  reconf
input-sources/3rdPartySoftware/lphw/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
input-sources/3rdPartySoftware/lphw/doc/: Makefile.am  lphw.html
input-sources/3rdPartySoftware/lphw/doc/doxygen/html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  lphw_8c.html  lphw_8c__incl.map  lphw_8c__incl.md5  lphw_8h.html  lphw_8h__dep__incl.map  lphw_8h__dep__incl.md5  lphw_8h_source.html
input-sources/3rdPartySoftware/lphw/doc/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  defines_0.js  defines_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
input-sources/3rdPartySoftware/lphw/doc/doxygen/latex/: files.tex  lphw_8c.tex  lphw_8c__incl.md5  lphw_8h.tex  lphw_8h__dep__incl.md5  refman.tex
input-sources/3rdPartySoftware/lphw/lib/: Makefile.am  lphw.c  lphw.h
input-sources/3rdPartySoftware/lphw/src/: testlphw
input-sources/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
input-sources/doc/: Makefile.am  phw.html
input-sources/doc/doxygen/html/: dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_fb68995af4ff536eb5f4c6fd8e19068a.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  phw__daughter__module_8c.html  phw__daughter__module_8c__incl.map  phw__daughter__module_8c__incl.md5  phw__daughter__module_8h.html  phw__daughter__module_8h__dep__incl.map  phw__daughter__module_8h__dep__incl.md5  phw__daughter__module_8h_source.html  phw__sister__module_8c.html  phw__sister__module_8c__incl.map  phw__sister__module_8c__incl.md5  phw__sister__module_8h.html  phw__sister__module_8h__dep__incl.map  phw__sister__module_8h__dep__incl.md5  phw__sister__module_8h_source.html
input-sources/doc/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  defines_0.js  defines_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
input-sources/doc/doxygen/latex/: files.tex  phw__daughter__module_8c.tex  phw__daughter__module_8c__incl.md5  phw__daughter__module_8h.tex  phw__daughter__module_8h__dep__incl.md5  phw__sister__module_8c.tex  phw__sister__module_8c__incl.md5  phw__sister__module_8h.tex  phw__sister__module_8h__dep__incl.md5  refman.tex
input-sources/src/: Makefile.am  phw.c  phw_sister_module.c  phw_sister_module.h
input-sources/src/daughter-module/: Makefile.am  phw_daughter_module.c  phw_daughter_module.h
reference-compliance-artifacts/: bom.csv  donts.yaml  dos.yaml  oscf.md  prerequisites.csv
