# Copyright (C) 2020 Karsten Reincke, Deutsche Telekom AG
#  
# This file is part of of the software-project PHW.
# 
# PHW is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# PHW is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
#  
# file <Makefile.am> version <#1.0.0#> of project <PHW>

EXTRA_DIST = AUTHORS ChangeLog change-release configure.ac COPYING Doxyfile Makefile.am prepClearRepCommit prj.spec README.md reconf 
SUBDIRS = doc src 3rdPartySoftware

AUTOMAKE_OPTIONS = foreign
