# Copyright (C) 2020 Karsten Reincke / Deutsche Telekom AG
#  
# The LHPW project (Library for a Plain Hello World Program) is 
# licensed under the Apache License, Version 2.0 (the "License"); 
# you may not use the software except in compliance with the License.
#  
# file <Makefile.am> version <#1.0.0#> of project <LPHW>

EXTRA_DIST = doinst.sh lphw-1.0.0.tar.gz
AUTOMAKE_OPTIONS = foreign

